# itm

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  ERRORS_AND_WARNINGS.md  LICENSE.md  README.md  cmdREADME.md  itmlib.pc.in  pfls.csv
.github/workflows/: compile-and-test.yml
app/: AreaMode.cpp  Common.h  ITMDrvr.cpp  ITMDrvr.rc  ITMDrvr.vcxproj.filters  Labels.h  Reporting.h  Tags.h  resource.h
cmd_examples/: i_areacr.txt  i_areatls.txt  i_p2ptls.txt  o_areacr.txt  o_areacr_tbl.txt  o_areatls.txt  o_p2pcr.txt  o_p2pcr_tbl.txt  o_p2ptls.txt  pfl.txt
docs/: CMakeLists.txt  doxy_custom.css  doxy_footer.html  doxy_header.html  doxy_mainpage.md
dotnet/: ITMIntermediateValues.cs  ITS.Propagation.ITM.csproj  ITS.Propagation.ITM.sln
dotnet/ITS.Propagation.ITM/: Enums.cs  ITM.cs  ITS.Propagation.ITM.csproj
dotnet/ITS.Propagation.ITM/Properties/: AssemblyInfo.cs
dotnet/nuget/: itm.nuspec
include/: Enums.h  Errors.h  itm.h
include/ITS.Propagation.ITM/: Enums.h  Errors.h  ITM.h  Warnings.h
matlab/: CallITM_AREA_TLS_Ex.c  CallITM_AREA_VALIDATION.c  ExportIntermediateValues.c
src/: CMakeLists.txt  ComputeDeltaH.cpp  DiffractionLoss.cpp  FindHorizons.cpp  FreeSpaceLoss.cpp  FresnelIntegral.cpp  H0Function.cpp  InitializeArea.cpp  InitializePointToPoint.cpp  InverseComplementaryCumulativeDistributionFunction.cpp  KnifeEdgeDiffraction.cpp  LineOfSightLoss.cpp  LinearLeastSquaresFit.cpp  LongleyRice.cpp  QuickPfl.cpp  SigmaHFunction.cpp  SmoothEarthDiffraction.cpp  TerrainRoughness.cpp  TroposcatterLoss.cpp  ValidateInputs.cpp  Variability.cpp  itm_area.cpp  itm_p2p.cpp
tests/: CMakeLists.txt  TestComputeDeltaH.cpp  TestDiffractionLoss.cpp  TestEquivalence.cpp  TestFindHorizons.cpp  TestFreeSpaceLoss.cpp  TestFresnelIntegral.cpp  TestH0Function.cpp  TestInitializeArea.cpp  TestInitializePointToPoint.cpp  TestInverseComplementaryCumulativeDistributionFunction.cpp  TestKnifeEdgeDiffraction.cpp  TestLineOfSightLoss.cpp  TestLinearLeastSquaresFit.cpp  TestLongleyRice.cpp  TestQuickPfl.cpp  TestSigmaHFunction.cpp  TestSmoothEarthDiffraction.cpp  TestTerrainRoughness.cpp  TestTroposcatterLoss.cpp  TestUtils.cpp  TestUtils.h  TestValidateInputs.cpp  TestVariability.cpp  area.csv  p2p.csv
tests/cmd_examples/: i_areacr_tbl.txt  i_p2pcr.txt  i_p2pcr_tbl.txt  o_p2pcr_tbl.txt
tests/data/: real_medians.csv
win32/: itm.sln
win32/ITMDrvr/: AreaMode.cpp  AreaMode.h  CMakeLists.txt  Common.cpp  Common.h  ITMDrvr.cpp  ITMDrvr.h  ITMDrvr.rc  ITMDrvr.vcxproj  Labels.h  PointToPointMode.cpp  PointToPointMode.h  Reporting.cpp  Reporting.h
win32/itm/: itm.def  itm.rc  itm.vcxproj  itm.vcxproj.filters  resource.h
wrap/: CMakeLists.txt
